Removes records to avoid using the enable-preview options (#276)
Removes records objects to avoid hosting projects to being forced to use the enable-preview options